interface test and first game mechanics

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -8,6 +8,7 @@
 @import 'base/base';
 @import 'base/header';
 @import 'base/footer';
+@import 'base/interface-test';
 
 // Vendors
 @import 'vendor/responsive';
