--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,14 +1,189 @@
 @charset 'UTF-8';
+@import 'normalize';
 
-// Tools
-@import 'tools/variables';
+@charset "UTF-8";
 
-// Base
-@import 'base/normalize';
-@import 'base/base';
-@import 'base/header';
-@import 'base/footer';
-@import 'base/interface-test';
+$color-txt : #EAEAEA;
+$duration : 0.3s;
 
-// Vendors
-@import 'vendor/responsive';
+@font-face {
+	font-family: 'Ailerons';
+	src: url('Ailerons-Regular.eot');
+	src: url('Ailerons-Regular.eot?#iefix') format('embedded-opentype'),
+		url('Ailerons-Regular.woff') format('woff'),
+		url('Ailerons-Regular.ttf') format('truetype');
+	font-weight: normal;
+	font-style: normal;
+}
+
+body {
+  font-family: 'Ailerons';
+  color: $color-txt;
+}
+
+*{ box-sizing: border-box; }
+
+.sky {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient( 180deg, #1D1D1B, #343356 );
+  &--star {
+    position: absolute;
+    top: 20px;
+    left: 0;
+  }
+}
+
+.menu {
+  position: fixed;
+  top: 20px;
+  left: 20px;
+  width: 310px;
+  height: 80%;
+  background-color: rgba(#777,.5);
+  border: 6px solid #282828;
+  border-radius: 15px;
+  padding: 15px;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  &--item {
+    height: 60px;
+    border-bottom: 2px solid #282828;
+    box-sizing: content-box;
+    position: relative;
+    &--place {
+      height: 500px;
+    }
+    &--img {
+      margin-top: 10px;
+      height: 40px;
+      display: inline-block;
+    }
+    &--title {
+      font-family: helcetica, sans-serif;
+      font-weight: bold;
+      font-size: 11px;
+      text-transform: uppercase;
+      position: absolute;
+      top: 11px;
+      left: 70px;
+    }
+    &--resources {
+      height: 20px;
+      position: absolute;
+      left: 70px;
+      bottom: 12px;
+      width: 250px;
+      &--fer, &--silicium, &--carbon {
+        display: inline-block;
+        &--img {
+          width: 15px;
+        }
+        &--price {
+          font-size: 18px;
+        }
+      }
+    }
+  }
+}
+
+.rocket {
+  position: fixed;
+  bottom: 140px;
+  left: 50%;
+  margin-left: -25px;
+  width: 50px;
+  &--fuselage {
+    width: 100%;
+  }
+  &--flame {
+    position: absolute;
+    width: 26px;
+    z-index: -1;
+    left: 12px;
+    bottom: -32px;
+  }
+  &--wing {
+    z-index: -1;
+    top: 190px;
+    position: absolute;
+    width: 120px;
+    left: -35px;
+  }
+}
+
+.mountain {
+  position: fixed;
+  width: 100%;
+  bottom: 0;
+}
+
+.distance {
+  position: fixed;
+  left: 50%;
+  transform: translateX(-50%);
+  top: 60px;
+  &--title {
+    font-size: 35px;
+    text-align: center;
+  }
+}
+
+.resources {
+  position: fixed;
+  left: 70px;
+  bottom: 25px;
+  &--item {
+    margin-top: 10px;
+    &--img {
+      width: 35px;
+      display: inline-block;
+    }
+    &--score {
+      font-size: 30px;
+      display: inline-block;
+      position: relative;
+      left: 20px;
+      bottom: 10px;
+      &::after {
+        content: '';
+        display: block;
+        position: absolute;
+        bottom: -6px;
+        left: -17px;
+        right: 5px;
+        height: 2px;
+        background-color: $color-txt;
+      }
+    }
+  }
+}
+.energy {
+  position: fixed;
+  top: 10%;
+  right: 40px;
+  &--logo {
+    width: 35px;
+  }
+  &--bar {
+    width: 13px;
+    margin-top: 20px;
+    margin-left: 10px;
+    height: 300px;
+    border: 2px solid #686868;
+    border-radius: 13px;
+    position: relative;
+    overflow: hidden;
+    &--full {
+      background-color: #FECE48;
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      top: 0;
+      right: 0;
+      transform-origin: 100% 100%;
+      transform: scaleY(0.7);
+    }
+  }
+}
