--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -7,13 +7,13 @@ $color-txt : #EAEAEA;
 $duration : 0.3s;
 
 @font-face {
-	font-family: 'Ailerons';
-	src: url('../fonts/Ailerons-Regular.eot');
-	src: url('../fonts/Ailerons-Regular.eot?#iefix') format('embedded-opentype'),
-		url('../fonts/Ailerons-Regular.woff') format('woff'),
-		url('../fonts/Ailerons-Regular.ttf') format('truetype');
-	font-weight: normal;
-	font-style: normal;
+  font-family: 'Ailerons';
+  src: url('../fonts/Ailerons-Regular.eot');
+  src: url('../fonts/Ailerons-Regular.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/Ailerons-Regular.woff') format('woff'),
+    url('../fonts/Ailerons-Regular.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
 }
 
 body {
@@ -47,6 +47,20 @@ body {
   padding: 15px;
   overflow-y: scroll;
   overflow-x: hidden;
+
+  &::-webkit-scrollbar {
+    width: 3px;
+  }
+
+  &::-webkit-scrollbar-track {
+
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background: #c1c1c1;
+    border-radius: 20px;
+  }
+
   &--item {
     height: 60px;
     border-bottom: 2px solid #282828;
