--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -49,16 +49,7 @@ body {
   overflow-x: hidden;
 
   &::-webkit-scrollbar {
-    width: 3px;
-  }
-
-  &::-webkit-scrollbar-track {
-
-  }
-
-  &::-webkit-scrollbar-thumb {
-    background: #c1c1c1;
-    border-radius: 20px;
+    display: none;
   }
 
   &--item {
