--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -80,7 +80,7 @@ body {
       display: inline-block;
     }
     &--title {
-      font-family: helcetica, sans-serif;
+      font-family: helvetica, sans-serif;
       font-weight: bold;
       font-size: 11px;
       text-transform: uppercase;
@@ -112,6 +112,25 @@ body {
         }
       }
     }
+  }
+}
+
+.popup {
+  position: fixed;
+  left: 330px;
+  width: 330px;
+  top: 0px;
+  height: 80%;
+  padding-top: 5px;
+  z-index: 99;
+  &--item {
+    background-color: rgba(#777,.5);
+    border: 6px solid #282828;
+    border-radius: 15px;
+    height: 75px;
+    padding-top: 12px;
+    padding-left: 10px;
+    padding-right: 10px;
   }
 }
 
