--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -14,6 +14,10 @@ $duration : 0.3s;
   font-style: normal;
 }
 
+html {
+  overflow: hidden;
+}
+
 body {
   font-family: 'Ailerons';
   color: $color-txt;
@@ -135,7 +139,6 @@ body {
   height: 80%;
   padding-top: 5px;
   z-index: 99;
-  display: none;
   &--item {
     background-color: rgba(#777,.5);
     border: 6px solid #282828;
@@ -144,6 +147,7 @@ body {
     padding-top: 12px;
     padding-left: 10px;
     padding-right: 10px;
+    display: none;
   }
 }
 
@@ -169,6 +173,16 @@ body {
     z-index: -1;
     left: 12px;
     bottom: -32px;
+    transform-origin: 0 0;
+    transform: scaleY(1.3);
+    &--anim {
+      animation: rocket_flame_anim 1s 1s infinite;
+    }
+    @keyframes rocket_flame_anim {
+      0% {transform: scaleY(1.3);}
+      60% {transform: scaleY(1.9);}
+      100% {transform: scaleY(1.3);}
+    }
   }
   &--wing {
     z-index: -1;
