--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -25,6 +25,24 @@ body {
   background-color: #0e0e16;
 }
 
+.stars {
+  position: fixed;
+  width: 100%;
+  height: 3000px;
+  bottom: 40%;
+  background-image: url('../img/stars_speed.svg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  z-index: 1;
+  &--anim {
+    animation: stars_anim 5s 2.5s linear infinite;
+  }
+  @keyframes stars_anim {
+    0% {transform: translateY(0);}
+    100% {transform: translateY(50%);}
+  }
+}
+
 .sky {
   position: fixed;
   width: 100%;
@@ -157,6 +175,7 @@ body {
   left: 50%;
   margin-left: -25px;
   width: 50px;
+  z-index: 2;
   &--anim {
     animation: rocket_anim 3s 1s cubic-bezier(.66,.06,.42,.99) forwards;
   }
