--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -35,7 +35,7 @@ body {
   background-repeat: no-repeat;
   z-index: 1;
   &--anim {
-    animation: stars_anim 5s 2.5s linear infinite;
+    animation: stars_anim 5s 2.2s linear infinite;
   }
   @keyframes stars_anim {
     0% {transform: translateY(0);}
@@ -194,8 +194,10 @@ body {
     bottom: -32px;
     transform-origin: 0 0;
     transform: scaleY(1.3);
+    display: none;
     &--anim {
-      animation: rocket_flame_anim 1s 1s infinite;
+      animation: rocket_flame_anim 1s infinite;
+      display: block;
     }
     @keyframes rocket_flame_anim {
       0% {transform: scaleY(1.3);}
