--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -33,7 +33,7 @@ body {
   background-image: url('../img/stars_speed.svg');
   background-size: cover;
   background-repeat: no-repeat;
-  z-index: 1;
+  z-index: 20;
   &--anim {
     animation: stars_anim 5s 2.2s linear infinite;
   }
@@ -48,6 +48,7 @@ body {
   width: 100%;
   height: 100%;
   background: linear-gradient( 180deg, #0e0e16, #343356 );
+  z-index: 10;
   &--anim {
     animation: sky_anim 2s 1s cubic-bezier(.71,.06,.98,.46) forwards;
   }
@@ -74,6 +75,7 @@ body {
   padding-top: 5px;
   overflow-y: scroll;
   overflow-x: hidden;
+  z-index: 30;
   &--anim {
     animation: menu_anim 2.5s forwards;
   }
@@ -156,7 +158,7 @@ body {
   top: 0px;
   height: 80%;
   padding-top: 5px;
-  z-index: 99;
+  z-index: 40;
   &--item {
     background-color: rgba(#777,.5);
     border: 6px solid #282828;
@@ -175,7 +177,7 @@ body {
   left: 50%;
   margin-left: -25px;
   width: 50px;
-  z-index: 2;
+  z-index: 90;
   &--anim {
     animation: rocket_anim 3s 1s cubic-bezier(.66,.06,.42,.99) forwards;
   }
@@ -218,6 +220,7 @@ body {
   position: fixed;
   width: 100%;
   bottom: 0;
+  z-index: 50;
   &--anim {
     animation: mountain_anim 2s 1s cubic-bezier(.71,.06,.98,.46) forwards;
   }
@@ -232,6 +235,7 @@ body {
   left: 50%;
   transform: translateX(-50%);
   top: 60px;
+  z-index: 100;
   &--title {
     font-size: 35px;
     text-align: center;
@@ -242,6 +246,7 @@ body {
   position: fixed;
   left: 70px;
   bottom: 25px;
+  z-index: 100;
   &--item {
     margin-top: 10px;
     &--img {
@@ -272,6 +277,7 @@ body {
   position: fixed;
   top: 10%;
   right: 40px;
+  z-index: 100;
   &--logo {
     width: 35px;
   }
@@ -294,5 +300,14 @@ body {
       transform-origin: 100% 100%;
       transform: scaleY(0.7);
     }
+  }
+}
+
+.particles-container {
+  position: relative;
+  z-index: 10000;
+  .multiplier p {
+    font-family: 'Ailerons';
+    font-size: 70px;
   }
 }
