--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -293,12 +293,15 @@ body {
     &--full {
       background-color: #FECE48;
       position: absolute;
+      z-index: -1;
       bottom: 0;
       left: 0;
       top: 0;
       right: 0;
       transform-origin: 100% 100%;
       transform: scaleY(0);
+      transition: transform 0.3s linear;
+      will-change: transform;
     }
   }
   &--value {
