--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -76,7 +76,7 @@ body {
   overflow-x: hidden;
   z-index: 30;
   padding-top: 40px;
-  &--foreuse, &--classement, &--vaiseau {
+  &--foreuse, &--classement {
     display: none;
   }
   &--select {
