--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -25,6 +25,140 @@ body {
   background-color: #0e0e16;
 }
 
+.opening {
+  position: fixed;
+  min-width: 100%;
+  min-height: 100vh;
+  z-index: 1000;
+  &--left, &--right{
+    width: 50%;
+    height: 100vh;
+    display: inline-block;
+    position: absolute;
+  }
+  &--left {
+    z-index: 456775;
+    top: 0;
+    left: 0;
+    animation-name: slide_left;
+    animation-duration: 5s;
+    animation-timing-function: cubic-bezier(0.87,-0.01, 0.85, 0.44);
+    animation-delay: 4s;
+    animation-fill-mode: forwards;
+    &--img{
+      height: 100%;
+      position: absolute;
+      top: 0;
+      right: 0px;
+    }
+    &--container {
+      position: relative;
+      width: 100%;
+      height: 100%;
+      &::after {
+        content: '';
+        background-color: #363636;
+        display: block;
+        height: 270px;
+        width: 270px;
+        position: absolute;
+        border-radius: 50%;
+        top: 50%;
+        left: 50%;
+        margin-left: 80px;
+        transform: translate(50%, -50%);
+        z-index: -1;
+      }
+      &--logo {
+        width: 246px;
+        position: absolute;
+        top: 50%;
+        right: 0;
+        transform: translate(50%, -50%);
+        transform-origin: 50% 50%;
+        border-radius: 280px;
+        animation-name: blink;
+        animation-duration: 4s;
+        animation-timing-function: ease-in;
+        animation-fill-mode: forwards;
+      }
+    }
+    &--title {
+      position: relative;
+      width: 100%;
+      height: 100%;
+      h1 {
+        font-family: ailerons;
+        position: absolute;
+        top: -50%;
+        right: 30%;
+        color: white;
+        font-size: 65px;
+      }
+    }
+  }
+  &--right {
+    top: 0;
+    right: 0;
+    overflow: hidden;
+    animation-name: slide_right;
+    animation-duration: 5s;
+    animation-timing-function: cubic-bezier(0.87,-0.01, 0.85, 0.44);
+    animation-delay: 4s;
+    animation-fill-mode: forwards;
+    &--img {
+      height: 100%;
+      position: absolute;
+      top: 0;
+      left: 0;
+    }
+    &--title {
+      width: 100%;
+      height: 100%;
+      position: relative;
+      h1 {
+        font-family: ailerons;
+        position: absolute;
+        top: 50%;
+        left: 30%;
+        color: white;
+        font-size: 65px;
+      }
+    }
+  }
+  @keyframes slide_left {
+    from {transform: translateX(0);}
+    to {transform: translateX(-200%);}
+  }
+  @keyframes slide_right {
+      from {transform: translateX(0);}
+      to {transform: translateX(200%);}
+  }
+  @keyframes blink {
+    0% {box-shadow: 0 0 30px 3px rgba(255, 168, 0, 1);
+         transform: translate(50%, -50%) rotate(0deg);}
+    10% {box-shadow: 0 0 1px 1px rgba(255, 168, 0, 1);
+         transform: translate(50%, -50%) rotate(0deg);}
+    20% {box-shadow: 0 0 30px 3px rgba(255, 168, 0, 1);
+         transform: translate(50%, -50%) rotate(0deg);}
+    30% {box-shadow: 0 0 1px 1px rgba(255, 168, 0, 1);
+         transform: translate(50%, -50%) rotate(0deg);}
+    40% {box-shadow: 0 0 30px 3px rgba(255, 168, 0, 1);
+         transform: translate(50%, -50%) rotate(0deg);}
+    50% {box-shadow: 0 0 1px 1px rgba(255, 168, 0, 1);
+         transform: translate(50%, -50%) rotate(0deg);}
+    60% {box-shadow: 0 0 30px 3px rgba(255, 168, 0, 1);
+         transform: translate(50%, -50%) rotate(0deg);}
+    70% {box-shadow: 0 0 1px 3px rgba(255, 168, 0, 1);
+         transform: translate(50%, -50%) rotate(0deg);}
+    80% {box-shadow: 0 0 30px 3px rgba(0, 255, 56, 1);
+         transform: translate(50%, -50%) rotate(0deg);}
+    100% {box-shadow: 0 0 30px 3px rgba(0, 255, 56, 1);
+          transform: translate(50%, -50%) rotate(40deg);
+          transition: all 3s ease;}
+  }
+}
+
 .active {
   display: block !important;
 }
